2010-07-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Sort files in report by filename, see feature request 1337718

2010-07-23	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fixed indent of XAttrs output
	* Fixed report_attributes for XAttrs
	* Fixed indent of ACL output
	* Fixed report_attributes for ACL
	* Fixed report_attributes for Lname and SELinux

2010-07-22	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fixed report_attributes for checksum values
	* Replaced 'E2fsAttrs' by 'E2FSAttrs'
	* Fixed report_attributes for string and long values
	* summarize_changes: made summary string length also for
	  added/removed files dynamic

2010-07-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fixed typo in aide.conf man page
	* summarize_changes: made length of summary string dynamic
	* Always save the inode to database (needed for DB_CHECKINODE)
	* Documented ftype and e2fsattrs in aide.conf
	* Added TFTYPE token
	* Prompt for ./configure and make only if autoreconf was successful

2010-07-20	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added ext2 file attributes support

2010-06-12	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Always add permissions attribute to database
	* Added AIDEVERSION to report

2010-06-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjusted old database warning message

2010-06-10	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added file type change detection support
	* Use DB_ATTR_TYPE for ignorelist and forced_attrs

2010-06-09	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fixed handling of size and growing size bits

2010-06-08	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Another fix for the changed permissions are always reported issue

2010-06-07	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Replaced 'Permissions' by 'Perm' to fit 9 columns
	* Fit detailed output in 80 columns, closes feature request 1337759

2010-06-05	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.14.2