@@ -35,7 +35,7 @@ void compare_db(list*,db_config*);
  * report_tree()
  * Generate report based on the tree left by populate_tree()
  * stage= which stage to do check=0 added=1, removed=2
- * changed=3 , detailed=4
+ * changed=3 , detailed=4, non-grouped=5
  * stat contains 5 ints, 0: are we the first to be called
  * 1: total number of files 2: # added files, 
  * 3: # removed, 4: # changed
