@@ -4,6 +4,7 @@
 =========================================================
 
 Version UNRELEASED
+    * Added new grouped option
     * Sort files in report by filename
     * Added support for e2fsattrs attribute
     * Added support for ftype attribute
