@@ -1,4 +1,5 @@
 2010-07-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Added new grouped option
 	* Sort files in report by filename, see feature request 1337718
 
 2010-07-23	Hannes von Haugwitz <hannes@vonhaugwitz.com>
